# libwfut

./: .cvsignore  .gitignore  .mailmap  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  acinclude.m4  autogen.sh  configure.ac  libwfut-0.2.pc.in  libwfut.dox  libwfut.dox.in
.github/workflows/: cmake.yml
extras/python/: WFUTCore.py  wfut-python.py
libwfut/: ChannelFileList.h  ChannelIO.h  ChannelParser.cpp  ChannelWriter.cpp  Encoder.cpp  Encoder.h  FileIO.h  FileParser.cpp  FileWriter.cpp  IO.cpp  IO.h  Makefile.am  MirrorParser.cpp  WFUT.cpp  WFUT.h  crc32.cpp  crc32.h  header.h  platform.cpp  platform.h  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp  types.h
man/man1/: Makefile.am  wfut.1
python/: .cvsignore  Makefile.am  WFUT.i  WFUTAvahiClient.py  WFUTCore.py  wfut-python.py  wfut-server.py
src/: CMakeLists.txt  wfut.cpp
src/libwfut/: ChannelFileList.h  ChannelIO.h  ChannelParser.cpp  ChannelWriter.cpp  Encoder.h  FileIO.h  FileParser.cpp  FileWriter.cpp  IO.cpp  IO.h  MirrorParser.cpp  WFUT.cpp  WFUT.h  crc32.cpp  crc32.h  header.h  platform.h  types.h
support/: ChangeLog-CVS
tinyxml/: Makefile.am  tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp  xmltest.cpp
tinyxml/docs/: annotated.html  classTiXmlAttribute-members.html  classTiXmlAttribute.html  classTiXmlBase-members.html  classTiXmlBase.html  classTiXmlComment-members.html  classTiXmlComment.html  classTiXmlDeclaration-members.html  classTiXmlDeclaration.html  classTiXmlDocument-members.html  classTiXmlDocument.html  classTiXmlElement-members.html  classTiXmlElement.html  classTiXmlHandle-members.html  classTiXmlHandle.html  classTiXmlNode-members.html  classTiXmlNode.html  classTiXmlText-members.html  classTiXmlText.html  classTiXmlUnknown-members.html  classTiXmlUnknown.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_rela.html  functions_vars.html  hierarchy.html  index.html  tinystr_8h-source.html  tinyxml_8h-source.html
tools/: Config.cmake.in  Makefile.am  libwfut.spec.in  wfut.cpp  wfut.pc.in
tools/conan/: conanfile.py
tools/conan/test_package/: CMakeLists.txt  example.cpp
